# autovram

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.autovram/runs/2026-02-12_16-02-42/trials/trial_001/: result.json  stderr.txt
.github/workflows/: ci.yml
examples/: torch_train_demo.py
src/autovram/: __init__.py
src/autovram/cli/: app.py
src/autovram/core/: detect.py  metric.py  oom.py  runner.py  tuner.py  types.py
src/autovram/engines/: base.py  heuristic.py  llm_autobatch_engine.py  registry.py  vllm_engine.py
src/autovram/io/: export.py
src/autovram/runtime/: __init__.py  runtime.py
tests/: test_cli.py  test_engine_registry.py  test_export.py  test_tuner_search.py
